203 sonarcloud issues (#207)
* To make SonarCloud happy.

* To make SonarCloud happy.

* Added test cases.

* Added test cases on Accept.

* Handling the interruption.

* Fixes.

* Fixes.

* Fixes.

* After review.